--- a/styles.css
+++ b/styles.css
@@ -5,13 +5,15 @@ body {
 }
 
 .background {
-    background-color: rosybrown;
+    background: linear-gradient(300deg, #020000, #9d1717);
+    background-size: 180% 200%;
+    animation: gradient-animation 5s ease infinite;
 }
 
 .square {
     width: 20%;
     margin: 40%;
-    height: 59%;
+    height: 60%;
     background-color: #ff5757;
     border-radius: 2em;
     border: 0.1em solid black;
@@ -100,3 +102,14 @@ body {
     background-color: black;
 }
 
+@keyframes gradient-animation {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
