--- a/styles.css
+++ b/styles.css
@@ -113,3 +113,132 @@ body {
         background-position: 0% 50%;
     }
 }
+
+@media (min-width: 300px) {
+    #display {
+        font-size:small;
+    }
+
+    .square {
+        width: 50%;
+        margin: 25%;
+        height: 54%;
+    }
+
+    .line {
+        font-size: 16px;
+        gap: 6px;
+    }
+
+    .a {
+        height: 50px;
+    }
+
+    .equal {
+        height: 110px;
+    }
+}
+
+@media (min-width: 767px) {
+    
+    #display {
+        font-size:large;
+    }
+
+    .square {
+        width: 30%;
+        margin: 35%;
+        height: 55%;
+    }
+
+    .line {
+        font-size: 20px;
+        gap: 6px;
+    }
+
+    .a {
+        height: 52px;
+    }
+
+    .equal {
+        height: 110px;
+    }
+}
+
+
+@media (min-width: 992px) {
+    
+    #display {
+        font-size:large;
+    }
+
+    .square {
+        width: 27%;
+        margin: 32.5%;
+        height: 63%;
+    }
+
+    .line {
+        font-size: 23px;
+        gap: 6px;
+    }
+
+    .a {
+        height: 63px;
+    }
+
+    .equal {
+        height: 138px;
+    }
+}
+
+@media (min-width: 1200px) {
+    
+    #display {
+        font-size:x-large;
+    }
+
+    .square {
+        width: 25%;
+        margin: 32.5%;
+        height: 63%;
+    }
+
+    .line {
+        font-size: 25px;
+        gap: 6px;
+    }
+
+    .a {
+        height: 63px;
+    }
+
+    .equal {
+        height: 138px;
+    }
+}
+
+@media (min-width: 1400px) {
+    
+    #display {
+        font-size:large;
+    }
+
+    .square {
+        width: 18%;
+        margin: 40%;
+        height: 60%;
+    }
+
+    .line {
+        font-size: 25px;
+    }
+
+    .a {
+        height: 59px;
+    }
+
+    .equal {
+        height: 130px;
+    }
+}
