--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,6 @@ body {
     
 }
 
-/*descobrir como deixar o display responsivo*/
 #display {
     margin-left: 10px;
     margin-right: 10px;
@@ -54,7 +53,7 @@ body {
     gap: 8px;
     margin-left: 10px;
     margin-right: 10px;
-    margin-top: 15px;
+    /* margin-top: 15px; */
     font-family: 'Bree Serif', sans-serif;
     font-size: 25px;
 }
@@ -120,9 +119,12 @@ body {
     }
 
     .square {
-        width: 80%;
-        margin: 10%;
-        height: 54%;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: stretch;
+        flex-direction: column;
+        width: 70%;
+        margin: 15%;
     }
 
     .line {
@@ -145,18 +147,21 @@ body {
     }
 
     .square {
-        width: 50%;
+        display: flex;
+        justify-content: space-evenly;
+        align-items:stretch;
+        flex-direction: column;
+        width: 46%;
         margin: 25%;
-        height: 54%;
+
     }
 
     .line {
-        font-size: 16px;
-        gap: 6px;
+        font-size: 20px;
     }
 
     .a {
-        height: 50px;
+        height: 57px;
     }
 
     .equal {
@@ -171,9 +176,12 @@ body {
     }
 
     .square {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: stretch;
+        flex-direction: column;
         width: 30%;
         margin: 35%;
-        height: 55%;
     }
 
     .line {
@@ -198,9 +206,12 @@ body {
     }
 
     .square {
-        width: 27%;
-        margin: 32.5%;
-        height: 63%;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: stretch;
+        flex-direction: column;
+        width: 23%;
+        margin: 37.5%;
     }
 
     .line {
@@ -209,7 +220,7 @@ body {
     }
 
     .a {
-        height: 63px;
+        height: 56px;
     }
 
     .equal {
@@ -220,13 +231,16 @@ body {
 @media (min-width: 1200px) {
     
     #display {
-        font-size:x-large;
+        font-size:large;
     }
 
     .square {
-        width: 25%;
-        margin: 32.5%;
-        height: 63%;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: stretch;
+        flex-direction: column;
+        width: 21%;
+        margin: 40.5%;
     }
 
     .line {
@@ -235,11 +249,11 @@ body {
     }
 
     .a {
-        height: 63px;
+        height: 57px;
     }
 
     .equal {
-        height: 138px;
+        height: 128px;
     }
 }
 
@@ -250,13 +264,16 @@ body {
     }
 
     .square {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: stretch;
+        flex-direction: column;
         width: 18%;
-        margin: 40%;
-        height: 60%;
+        margin: 41%;
     }
 
     .line {
-        font-size: 25px;
+        font-size: 23px;
     }
 
     .a {
