--- a/styles.css
+++ b/styles.css
@@ -10,28 +10,22 @@ body {
     animation: gradient-animation 5s ease infinite;
 }
 
-.square {
-    width: 20%;
-    margin: 40%;
-    height: 60%;
-    background-color: #ff5757;
-    border-radius: 2em;
-    border: 0.1em solid black;
-}
-
-.placeholder {
+.grid-container {
     display: grid;
-    grid-template-columns: 1f 1f 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    gap: 40px;
-    
+    grid-template-columns: repeat(4, minmax(50px, 1fr)); 
+    grid-template-rows: repeat(6, minmax(70px, 1fr)); 
+    gap: 8px;
+    margin-left: auto;
+    margin-right: auto;
+    font-family: 'Bree Serif', sans-serif;
+    font-size: 25px;
+    width: 60%; 
+    max-width: 25%;
+    margin-top: 4em;
 }
 
 #display {
-    margin-left: 10px;
-    margin-right: 10px;
-    grid-row-start: 1;
-    grid-row-end: 4;
+    grid-column: span 4;
     text-align: right;
     border: none;
     border-radius: 0.8em;
@@ -40,60 +34,35 @@ body {
     margin-top: 10px;
     font-size: x-large;
     color: black;
-    width: auto;
-}
-
-.line > a {
-    text-decoration: none;
-}
-
-.line {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 8px;
-    margin-left: 10px;
-    margin-right: 10px;
-    /* margin-top: 15px; */
-    font-family: 'Bree Serif', sans-serif;
-    font-size: 25px;
+    padding: 10px;
 }
 
 .a {
     background-color: #991b1b;
-    height: 60px;
-    margin-top: 4px;
+    height: 100%;
+    border-radius: 1em;
+    color: black;
+    text-decoration: none;
+    font-size: 28px;
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 1em;
-    color: black;
+    max-width: 100%;
 }
 
 .equal {
     grid-column-start: 4;
-    grid-column-end: 5;
-    grid-row-start: 4;
-    grid-row-end: 6;
-    height: 135px;
+    grid-row-start: 5;
+    grid-row-end: 7;
+    height: 100%;
     color: aliceblue;
     background-color: black;
     margin: 0;
 }
 
-.dot {
-    grid-column-start: 3;
-    grid-column-end: 4;
-    grid-row-start: 5;
-    grid-row-end: 6;
-    margin: 0;
-}
-
 .zero {
-    grid-column-start: 1;
-    grid-column-end: 3;
-    grid-row-start: 5;
-    grid-row-end: 6;
-    margin: 0;
+    grid-column: 1 / 3;
+    grid-row: 6;
 }
 
 .c {
@@ -113,247 +82,11 @@ body {
     }
 }
 
-@media (min-width: 100px) {
-    #display {
-        font-size:small;
-    }
-
-    .square {
-        display: flex;
-        justify-content: space-evenly;
-        align-items: stretch;
-        flex-direction: column;
-        width: 70%;
-        margin: 15%;
-    }
-
-    .line {
-        font-size: 16px;
-        gap: 6px;
-    }
-
-    .a {
-        height: 50px;
-    }
-
-    .equal {
-        height: 110px;
-    }
-}
-
-@media (min-width: 300px) {
-    #display {
-        font-size:small;
-    }
-
-    .square {
-        display: flex;
-        justify-content: space-evenly;
-        align-items:stretch;
-        flex-direction: column;
-        width: 46%;
-        margin: 25%;
-
-    }
-
-    .line {
+@media screen and (orientation: portrait) {
+    .grid-container {
         font-size: 20px;
-    }
-
-    .a {
-        height: 57px;
-    }
-
-    .equal {
-        height: 110px;
-    }
-}
-
-@media (min-width: 300px) {
-    .a {
-        height: 52px;
-    }
-
-    .equal {
-        height: 110px;
-    }
-}
-
-@media (min-width: 340px) {
-
-    #display {
-        font-size: x-small;
-    }
-    .square {
-        height: 25rem;
-    }
-}
-
-@media (min-width: 390px) {
-    .square {
-        height: 25rem;
-    }
-}
-
-
-@media (min-width: 767px) {
-    
-    #display {
-        font-size:large;
-    }
-
-    .square {
-        display: flex;
-        justify-content: space-evenly;
-        align-items: stretch;
-        flex-direction: column;
-        width: 30%;
-        margin: 35%;
-    }
-
-    .line {
-        font-size: 20px;
-        gap: 6px;
-    }
-
-    .a {
-        height: 52px;
-    }
-
-    .equal {
-        height: 110px;
-    }
-}
-@media (min-width: 820px) {
-
-    .square {
-        height: 28rem;
-    }
-
-    .a {
-        height: 52px;
-    }
-
-    .equal {
-        height: 110px;
-    }
-}
-
-
-@media (min-width: 992px) {
-    
-    #display {
-        font-size:large;
-    }
-
-    .square {
-        display: flex;
-        justify-content: space-evenly;
-        align-items: stretch;
-        flex-direction: column;
-        width: 23%;
-        margin: 37.5%;
-    }
-
-    .line {
-        font-size: 23px;
-        gap: 6px;
-    }
-
-    .a {
-        height: 56px;
-    }
-
-    .equal {
-        height: 138px;
-    }
-}
-
-@media (min-width: 1024px) {
-    
-    #display {
-        font-size:large;
-    }
-
-    .square {
-        display: flex;
-        justify-content: space-evenly;
-        align-items: stretch;
-        flex-direction: column;
-        width: 23%;
-        margin: 37.5%;
-        height: 28rem;
-    }
-
-    .line {
-        font-size: 23px;
-        gap: 6px;
-    }
-
-    .a {
-        height: 56px;
-    }
-
-    .equal {
-        height: 138px;
-    }
-}
-
-
-
-@media (min-width: 1200px) {
-    
-    #display {
-        font-size:large;
-    }
-
-    .square {
-        display: flex;
-        justify-content: space-evenly;
-        align-items: stretch;
-        flex-direction: column;
-        width: 21%;
-        margin: 40.5%;
-    }
-
-    .line {
-        font-size: 25px;
-        gap: 6px;
-    }
-
-    .a {
-        height: 57px;
-    }
-
-    .equal {
-        height: 128px;
-    }
-}
-
-@media (min-width: 1400px) {
-    
-    #display {
-        font-size:large;
-    }
-
-    .square {
-        display: flex;
-        justify-content: space-evenly;
-        align-items: stretch;
-        flex-direction: column;
-        width: 18%;
-        margin: 41%;
-    }
-
-    .line {
-        font-size: 23px;
-    }
-
-    .a {
-        height: 59px;
-    }
-
-    .equal {
-        height: 130px;
+        width: 70%; 
+        margin: 15%; 
+        max-width:fit-content;
     }
 }
